sumo/tests/traci/Scenario/DomainVehicle/InvalidObjectID/errors.traci
Error: Answered with error to command 115: Unable to retrieve node with given ID
Error while receiving command: tcpip::Socket::receive() @ recv: No error
Error while sending command: send failed: Software caused tcpip::Socket abort
